Bug 267764 - [LBSE] Fix clipping/masking related assertion failure in debug builds
Summary: [LBSE] Fix clipping/masking related assertion failure in debug builds
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: SVG (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nikolas Zimmermann
URL:
Keywords: InRadar
Depends on:
Blocks: 90738 265134
  Show dependency treegraph
 
Reported: 2024-01-19 07:07 PST by Nikolas Zimmermann
Modified: 2024-02-01 03:23 PST (History)
3 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nikolas Zimmermann 2024-01-19 07:07:32 PST
svg/clip-path/clip-path-content-syling.svg / svg/W3C-SVG-1.1/masking-intro-01-f.svg both assert in debug builds due to a spurious assertion in SVGPaintServerHandling stroking code.
Comment 1 Radar WebKit Bug Importer 2024-01-26 07:08:13 PST
<rdar://problem/121664010>
Comment 2 Nikolas Zimmermann 2024-01-31 06:38:03 PST
Pull request: https://github.com/WebKit/WebKit/pull/23576
Comment 3 EWS 2024-02-01 03:23:06 PST
Committed 273893@main (fdde18e9a354): <https://commits.webkit.org/273893@main>

Reviewed commits have been landed. Closing PR #23576 and removing active labels.