[LBSE] Fix clipping/masking related assertion failure in debug builds https://bugs.webkit.org/show_bug.cgi?id=267764

Reviewed by Rob Buis.

Both svg/clip-path/clip-path-content-syling.svg and svg/W3C-SVG-1.1/masking-intro-01-f.svg
assert in debug builds due to a spurious assertion in SVGPaintServerHandling stroking code.

Remove the assertion, the tests already work as expected.
No new tests, only fixes an assertion in existing tests.

* Source/WebCore/rendering/svg/SVGPaintServerHandling.h:
(WebCore::SVGPaintServerHandling::prepareStrokeOperation const):

Canonical link: https://commits.webkit.org/273893@main